--- a/sample/MyAbpApp/test/MyAbpApp.Web.Tests/MyAbpApp.Web.Tests.csproj
+++ b/sample/MyAbpApp/test/MyAbpApp.Web.Tests/MyAbpApp.Web.Tests.csproj
@@ -18,7 +18,7 @@
     <PackageReference Include="HtmlAgilityPack" Version="1.11.26" />
     <ProjectReference Include="..\MyAbpApp.Application.Tests\MyAbpApp.Application.Tests.csproj" />
     <ProjectReference Include="..\..\src\MyAbpApp.Web\MyAbpApp.Web.csproj" />
-    <PackageReference Include="Volo.Abp.AspNetCore.TestBase" Version="4.0.2" />
+    <PackageReference Include="Volo.Abp.AspNetCore.TestBase" Version="$(AbpVersion)" />
   </ItemGroup>
 
   <ItemGroup>
