--- a/sample/MyAbpApp/src/MyAbpApp.Web/MyAbpApp.Web.csproj
+++ b/sample/MyAbpApp/src/MyAbpApp.Web/MyAbpApp.Web.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>MyAbpApp.Web</RootNamespace>
     <AssetTargetFallback>$(AssetTargetFallback);portable-net45+win8+wp8+wpa81;</AssetTargetFallback>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -37,7 +37,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.*" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.*" />
   </ItemGroup>
 
   <ItemGroup>
@@ -45,15 +45,16 @@
     <ProjectReference Include="..\MyAbpApp.Application\MyAbpApp.Application.csproj" />
     <ProjectReference Include="..\MyAbpApp.HttpApi\MyAbpApp.HttpApi.csproj" />
     <ProjectReference Include="..\MyAbpApp.EntityFrameworkCore\MyAbpApp.EntityFrameworkCore.csproj" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="4.4.0" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="4.4.0" />
-    <PackageReference Include="Volo.Abp.Swashbuckle" Version="4.4.0" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="4.4.0" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="4.4.0" />
-    <PackageReference Include="Volo.Abp.Identity.Web" Version="4.4.0" />
-    <PackageReference Include="Volo.Abp.Account.Web.IdentityServer" Version="4.4.0" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Web" Version="4.4.0" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.Web" Version="4.4.0" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.Swashbuckle" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.Identity.Web" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.Account.Web.IdentityServer" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Web" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.Web" Version="5.0.1" />
+	<PackageReference Include="Volo.Abp.SettingManagement.Web" Version="5.0.1" />
   </ItemGroup>
 
 </Project>
