--- a/sample/MyAbpApp/src/MyAbpApp.HttpApi.Client/MyAbpApp.HttpApi.Client.csproj
+++ b/sample/MyAbpApp/src/MyAbpApp.HttpApi.Client/MyAbpApp.HttpApi.Client.csproj
@@ -20,4 +20,9 @@
     <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi.Client" Version="5.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Include="**\*generate-proxy.json" />
+    <Content Remove="**\*generate-proxy.json" />
+  </ItemGroup>
+
 </Project>
